--- a/figma/ZEN/sass/ZenGlobal.sass
+++ b/figma/ZEN/sass/ZenGlobal.sass
@@ -39,9 +39,18 @@ html
 
 @media ( max-width: 1428px)
     .ZEN-section__img
+        margin: 0 auto
+        padding: 20px
         img
             max-height: 553px
             max-width: 585px
+
+    .ZEN-section__common-text-h1
+        width: 100% !important
+        text-align: center
+
+    .ZEN-section__common-text-text
+        text-align: center
 
     .ZEN-section__common
         display: flex
