--- a/figma/ZEN/sass/section1.sass
+++ b/figma/ZEN/sass/section1.sass
@@ -49,6 +49,54 @@
                         height: 48px
                         border-radius: 0
 
+@media ( max-width: 1428px)
+
+    .ZEN-section__common-text
+        display: flex
+        flex-direction: column
+        justify-content: center
+        margin: 0 auto
+
+        &-textUp
+            margin-top: 15px
+            text-align: center
+
+        &-text
+            width: 100%
+            height: 100%
+            padding: 8px
+
+        &-h1
+            display: block
+            margin: 0 auto
+            padding: 10% 0
+            padding: 9px
+
+            &-1
+                text-align: center
+            &-2
+                text-align: center
+
+        &-textUnder
+            width: 100%
+            height: 100%
+            margin-top: 30px
+            text-align: center
+            padding: 9px
+
+        &-buttonApps
+            display: flex
+            justify-content: space-around
+            padding: 20px
+
+            &-AppStore a
+                display: flex
+                justify-content: center
+
+            &-GooglePlay a
+                display: flex
+                justify-content: center
+
 @media ( max-width: 1050px )
     .ZEN-section__common-text
         display: flex
