--- a/figma/ZEN/sass/section4.sass
+++ b/figma/ZEN/sass/section4.sass
@@ -10,9 +10,9 @@
     img
         border-radius: 0
 
-@media ( max-width: 1050px )
+@media ( max-width: 1428px )
     .sectionZEN-text-button
-        margin: 0 auto
+        margin: 0 auto !important
         display: flex
             /** flex-direction: column **/
         justify-content: space-around
