--- a/figma/ZEN/sass/section8.sass
+++ b/figma/ZEN/sass/section8.sass
@@ -2,7 +2,13 @@
     img
         border-radius: 0
 
-@media ( max-width: 1050px)
+@media ( max-width: 1428px)
+    .ZEN-section8-button
+        padding: 20px
+        display: flex
+        justify-content: space-around
+
+@media ( max-width: 450px)
     .ZEN-section8-button
         display: block
         margin: 0 auto
