--- a/sass/style.sass
+++ b/sass/style.sass
@@ -49,6 +49,7 @@
 @import "../figma/ZEN/sass/headerNew"
 @import "../figma/SOS/sass/footerSOS.sass"
 @import "../figma/SOS/sass/headerSOS"
+@import "../figma/Mediation/sass/Meditation-One"
 
 @import "../Andrusha-main/sass/catalog"
 @import "../Andrusha-main/sass/education"
