--- a/css/style.css
+++ b/css/style.css
@@ -4948,6 +4948,41 @@ body.lockSOS {
     margin-top: 8px;
   }
 }
+.Meditation-One {
+  min-weight: auto;
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background-position: center;
+  background-size: contain;
+  position: relative;
+  background-image: url(../figma/Mediation/img/Group1.svg);
+}
+.Meditation-One__h1 {
+  display: block;
+  margin: 0 auto;
+  color: white;
+  font-weight: 400;
+  font-size: 68px;
+  line-height: 88px;
+  text-align: center;
+  font-family: Merienda One;
+}
+.Meditation-One__img {
+  display: flex;
+  justify-content: center;
+}
+.Meditation-One__img img {
+  width: 354.6px;
+  height: 334.8px;
+}
+
+@font-face {
+  font-family: Merienda One;
+  src: url(../figma/Mediation/font/MeriendaOne-Regular.ttf);
+}
 .container {
   width: 80%;
 }
