--- a/Andrusha-main/sass/catalog.sass
+++ b/Andrusha-main/sass/catalog.sass
@@ -8,6 +8,7 @@ $vbr-color: #334bd4
     font-weight: 700
     font-size: 34px
     color: white
+    font-family: Marck Script
     text-shadow: -2px 0 $vbr-color, 0 2px $vbr-color, 2px 0 $vbr-color, 0 -2px $vbr-color
 
 .button_layout-wrapper
@@ -287,3 +288,7 @@ $vbr-color: #334bd4
 
     100%
         color: blue
+
+@font-face
+    font-family: Marck Script
+    src: url(../Andrusha-main/fonts/MarckScript.ttf)
