--- a/Andrusha-main/sass/catalog.sass
+++ b/Andrusha-main/sass/catalog.sass
@@ -9,6 +9,7 @@ $vbr-color: #334bd4
     font-size: 34px
     color: white
     font-family: Marck Script
+    margin-top: 20px
     text-shadow: -2px 0 $vbr-color, 0 2px $vbr-color, 2px 0 $vbr-color, 0 -2px $vbr-color
 
 .button_layout-wrapper
