--- a/sass/style.sass
+++ b/sass/style.sass
@@ -50,6 +50,9 @@
 @import "../figma/SOS/sass/footerSOS.sass"
 @import "../figma/SOS/sass/headerSOS"
 @import "../figma/Mediation/sass/Meditation-One"
+@import "../figma/Mediation/sass/papers"
+@import "../figma/Mediation/sass/Meditation-Global"
+@import "../figma/Mediation/sass/Meditation-item"
 
 @import "../Andrusha-main/sass/catalog"
 @import "../Andrusha-main/sass/education"
