--- a/app/Calc-on-iPhone-JS/sass/Calc-on-iPhone-JS.sass
+++ b/app/Calc-on-iPhone-JS/sass/Calc-on-iPhone-JS.sass
@@ -51,13 +51,13 @@
     margin-right: 20px
     text-align: right
 
-.buttons-container
+.CalcButtons-container
     display: grid
     grid-gap: 20px
     grid-template-columns: repeat(4, 1fr)
     grid-template-rows: repeat(5, 1fr)
 
-.button
+.CalcButton
     align-items: center
     background: #333
     border-radius: 50%
@@ -105,10 +105,10 @@
 
     .top-bar
 
-        .button.number-0
+        .CalcButton.number-0
             width: 172px
 
-        .button
+        .CalcButton
             font-size: 30px
 
     .value
@@ -124,17 +124,17 @@
             .value
                 font-size: 40px
 
-    .buttons-container
+    .CalcButtons-container
         padding: 0 10px
         grid-gap: 10px
 
-        .button
+        .CalcButton
             width: auto
 
 @media (max-width: 390px)
-    .button
+    .CalcButton
         font-size: 24px
 
 @media (max-width: 380px)
-    .button
+    .CalcButton
         height: 55px
