--- a/sass/style.sass
+++ b/sass/style.sass
@@ -53,6 +53,7 @@
 @import "../figma/Mediation/sass/papers"
 @import "../figma/Mediation/sass/Meditation-Global"
 @import "../figma/Mediation/sass/Meditation-item"
+@import "../figma/Mediation/sass/Meditation-music"
 
 @import "../Andrusha-main/sass/catalog"
 @import "../Andrusha-main/sass/education"
