--- a/css/style.css
+++ b/css/style.css
@@ -5132,6 +5132,32 @@ body.lockSOS {
   color: rgba(0, 0, 0, 0.8);
 }
 
+.Meditation-music {
+  display: flex;
+  justify-content: space-between;
+}
+.Meditation-music__item {
+  width: 100%;
+  height: 100%;
+  background-image: url(../figma/Mediation/img/background-music.svg);
+  background-repeat: no-repeat;
+}
+.Meditation-music__item .title {
+  font-family: Heebo;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 47px;
+  color: rgba(0, 0, 0, 0.8);
+  text-align: center;
+  margin-top: 20px;
+  text-shadow: none;
+}
+.Meditation-music__item .text {
+  font-weight: 400;
+  font-size: 24px;
+  color: rgba(0, 0, 0, 0.5);
+}
+
 .container {
   width: 80%;
 }
