--- a/css/style.css
+++ b/css/style.css
@@ -5137,22 +5137,29 @@ body.lockSOS {
   justify-content: space-between;
 }
 .Meditation-music__item {
-  width: 100%;
-  height: 100%;
+  width: 655px;
+  height: 160px;
   background-image: url(../figma/Mediation/img/background-music.svg);
   background-repeat: no-repeat;
+  position: relative;
 }
 .Meditation-music__item .title {
+  position: absolute;
   font-family: Heebo;
   font-weight: 500;
   font-size: 32px;
   line-height: 47px;
   color: rgba(0, 0, 0, 0.8);
   text-align: center;
-  margin-top: 20px;
+  top: 15px;
+  left: 40px;
   text-shadow: none;
+  line-height: 47px;
 }
 .Meditation-music__item .text {
+  position: absolute;
+  top: 90px;
+  left: 40px;
   font-weight: 400;
   font-size: 24px;
   color: rgba(0, 0, 0, 0.5);
