--- a/figma/Mediation/sass/Meditation-music.sass
+++ b/figma/Mediation/sass/Meditation-music.sass
@@ -3,22 +3,29 @@
     justify-content: space-between
 
     &__item
-        width: 100%
-        height: 100%
+        width: 655px
+        height: 160px
         background-image: url(../figma/Mediation/img/background-music.svg)
         background-repeat: no-repeat
+        position: relative
 
         .title
+            position: absolute
             font-family: Heebo
             font-weight: 500
             font-size: 32px
             line-height: 47px
             color: rgba(0, 0, 0, 0.8)
             text-align: center
-            margin-top: 20px
+            top: 15px
+            left: 40px
             text-shadow: none
+            line-height: 47px
 
         .text
+            position: absolute
+            top: 90px
+            left: 40px
             font-weight: 400
             font-size: 24px
             color: rgba(0, 0, 0, 0.5)
