--- a/figma/Mediation/sass/Meditation-item.sass
+++ b/figma/Mediation/sass/Meditation-item.sass
@@ -12,6 +12,7 @@
             position: relative
 
             .title
+                position: absolute
                 font-family: Heebo
                 font-weight: 500
                 font-size: 32px
