--- a/figma/Mediation/sass/Meditation-music.sass
+++ b/figma/Mediation/sass/Meditation-music.sass
@@ -11,6 +11,7 @@
 
         .title
             position: absolute
+            top: 35px
             font-family: Heebo
             font-weight: 500
             font-size: 32px
