--- a/sass/style.sass
+++ b/sass/style.sass
@@ -54,6 +54,7 @@
 @import "../figma/Mediation/sass/Meditation-Global"
 @import "../figma/Mediation/sass/Meditation-item"
 @import "../figma/Mediation/sass/Meditation-music"
+@import "../figma/Mediation/sass/Meditation-best"
 
 @import "../Andrusha-main/sass/catalog"
 @import "../Andrusha-main/sass/education"
