--- a/figma/Mediation/sass/Meditation-Global.sass
+++ b/figma/Mediation/sass/Meditation-Global.sass
@@ -20,7 +20,6 @@
     font-family: Merienda One
     line-height: 70px
     width: 710px
-    height: 140px
     color: black
     margin: 0 auto
     margin-top: 100px
@@ -36,3 +35,22 @@
     color: rgba(0, 0, 0, 0.5)
     text-align: center
     padding-top: 22px
+
+@media (max-width: 1140px)
+    .Meditation-subtitle
+        width: auto
+        height: auto
+        padding: 30px
+
+@media (max-width: 720px)
+    .Meditation-title-2
+        width: auto
+        height: auto
+        padding: 0 30px
+
+@media (max-width: 400px)
+    .Meditation-title-2
+        font-size: 40px
+
+    .Meditation-subtitle
+        font-size: 20px
