--- a/figma/Mediation/sass/Meditation-best.sass
+++ b/figma/Mediation/sass/Meditation-best.sass
@@ -1,11 +1,183 @@
 .Meditation-best
     min-weight: auto
     width: 100%
-    height: 1200px
+    height: 1500px
     background-repeat: no-repeat
     justify-content: center
     flex-direction: column
     background-position: center
     background-size: cover
     position: relative
+    padding: 50px 0
     background-image: url(../figma/Mediation/img/best-background.svg)
+
+    &__wrapper
+        display: flex
+        justify-content: space-between
+        margin: 0 auto
+        width: 90%
+        flex-wrap: wrap
+
+    &__img
+        margin-top: 50px
+        max-height: 802px
+
+    &-left
+        height: 852px
+        display: flex
+        flex-direction: column
+        justify-content: space-between
+
+        &__item
+            background-image: url(../figma/Mediation/img/Meditation-best__item-background-left.svg)
+            width: 602px
+            height: 205px
+            position: relative
+            margin-top: 50px
+            margin-left: 20px
+            margin-right: 20px
+            transition: 0.5s
+
+            &:hover
+                transform: scale(1.05)
+
+            &-title
+                font-family: Heebo
+                font-weight: 500
+                font-size: 32px
+                text-align: rigth
+                color: rgba(0, 0, 0, 0.8)
+                position: absolute
+                top: 25px
+                right: 35px
+
+            &-text
+                font-family: Heebo
+                font-weight: 400
+                font-size: 24px
+                line-height: 32px
+                color: rgba(0, 0, 0, 0.5)
+                position: absolute
+                top: 25px
+                right: 35px
+                width: 463px
+                height: 93px
+                text-align: right
+                position: absolute
+                top: 82px
+                right: 35px
+
+    &-right
+        height: 852px
+        display: flex
+        flex-direction: column
+        justify-content: space-between
+        &__item
+            background-image: url(../figma/Mediation/img/Meditation-best__item-background-right.svg)
+            width: 602px
+            height: 205px
+            position: relative
+            margin-top: 50px
+            margin-left: 20px
+            margin-right: 20px
+            transition: 0.5s
+
+            &:hover
+                transform: scale(1.05)
+
+            &-title
+                font-family: Heebo
+                font-weight: 500
+                font-size: 32px
+                text-align: rigth
+                color: rgba(0, 0, 0, 0.8)
+                position: absolute
+                top: 25px
+                left: 35px
+
+            &-text
+                font-family: Heebo
+                font-weight: 400
+                font-size: 24px
+                line-height: 32px
+                color: rgba(0, 0, 0, 0.5)
+                position: absolute
+                top: 82px
+                left: 35px
+                width: 463px
+                height: 93px
+                text-align: left
+
+@media (max-width: 1700px)
+    .Meditation-best
+        &__img
+            display: none
+
+@media (max-width: 1441px)
+
+    .Meditation-best
+        height: 1800px
+
+        &__wrapper
+            display: flex
+            flex-direction: column
+            justify-content: center
+            margin: 0 auto
+            flex-wrap: wrap
+            padding-top: 30px
+
+        &-left
+            display: block
+            height: auto
+
+            &__item
+                display: block
+                margin: 0 auto
+                margin-top: 20px
+                background-image: none
+                border-radius: 15px
+                background: linear-gradient(270deg, #C3EEE8 26.37%, rgba(195, 226, 222, 0.75) 63.87%, rgba(231, 243, 242, 0.4) 103.6%)
+
+                &-title
+                    display: block
+                    text-align: center
+                    position: static
+                    line-height: 70px
+
+                &-text
+                    display: block
+                    text-align: center
+                    margin: 0 auto
+                    position: static
+
+        &-right
+            display: block
+
+            &__item
+                display: block
+                margin: 0 auto
+                margin-top: 20px
+                background-image: none
+                border-radius: 15px
+                background: linear-gradient(270deg, #C3EEE8 26.37%, rgba(195, 226, 222, 0.75) 63.87%, rgba(231, 243, 242, 0.4) 103.6%)
+
+                &-title
+                    display: block
+                    text-align: center
+                    position: static
+                    line-height: 70px
+
+                &-text
+                    display: block
+                    text-align: center
+                    margin: 0 auto
+                    position: static
+
+@media (max-width: 670px)
+    .Meditation-best
+        height: 1900px
+
+    .Meditation-best-left__item
+        margin: 20px 0
+        width: 90%
+        height: auto
