--- a/sass/style.sass
+++ b/sass/style.sass
@@ -55,6 +55,8 @@
 @import "../figma/Mediation/sass/Meditation-item"
 @import "../figma/Mediation/sass/Meditation-music"
 @import "../figma/Mediation/sass/Meditation-best"
+@import "../figma/Mediation/sass/gym"
+@import "../figma/Mediation/sass/footer"
 
 @import "../Andrusha-main/sass/catalog"
 @import "../Andrusha-main/sass/education"
