--- a/css/style.css
+++ b/css/style.css
@@ -5377,6 +5377,59 @@ body.lockSOS {
     height: auto;
   }
 }
+.gym {
+  display: flex;
+  width: 80%;
+  margin: 0 auto;
+  justify-content: space-between;
+}
+.gym-item__title {
+  margin-top: 191px;
+  font-family: Heebo;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 47px;
+  color: rgba(0, 0, 0, 0.8);
+}
+.gym-item__text {
+  font-family: Heebo;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 31px;
+  color: rgba(0, 0, 0, 0.5);
+  width: 619px;
+}
+
+.Meditation-footer {
+  min-weight: auto;
+  width: 100%;
+  height: 440px;
+  background-repeat: no-repeat;
+  justify-content: center;
+  flex-direction: column;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  background-image: url(../figma/Mediation/img/footer.svg);
+}
+.Meditation-footer__img {
+  display: flex;
+  justify-content: center;
+  padding-top: 112px;
+}
+.Meditation-footer__logos {
+  width: 250px;
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 112px;
+  margin: 0 auto;
+}
+.Meditation-footer__logos img {
+  width: 55px;
+  height: 55px;
+}
+
 .container {
   width: 80%;
 }
