--- a/figma/Mediation/sass/Meditation-best.sass
+++ b/figma/Mediation/sass/Meditation-best.sass
@@ -9,7 +9,7 @@
     background-size: cover
     position: relative
     padding: 50px 0
-    background-image: url(../figma/Mediation/img/best-background.svg)
+    background-image: url(../figma/Mediation/img/Meditation-best-background.svg)
 
     &__wrapper
         display: flex
@@ -17,6 +17,7 @@
         margin: 0 auto
         width: 90%
         flex-wrap: wrap
+        padding-top: 170px
 
     &__img
         margin-top: 50px
