--- a/figma/Mediation/sass/Meditation-Global.sass
+++ b/figma/Mediation/sass/Meditation-Global.sass
@@ -51,6 +51,8 @@
 @media (max-width: 400px)
     .Meditation-title-2
         font-size: 40px
+        line-height: 45px
 
     .Meditation-subtitle
         font-size: 20px
+        line-height: 25px
