--- a/figma/Mediation/sass/Meditation-best.sass
+++ b/figma/Mediation/sass/Meditation-best.sass
@@ -176,9 +176,78 @@
 
 @media (max-width: 670px)
     .Meditation-best
-        height: 1900px
+        height: 2000px
 
-    .Meditation-best-left__item
-        margin: 20px 0
-        width: 90%
-        height: auto
+        &-left
+            width: 100%
+
+        &__wrapper
+            // padding: 20px
+
+        &-left__item
+            margin: 20px
+            width: auto
+
+            &-title
+                position: static
+
+            &-text
+                position: static
+                width: 90%
+                height: 100%
+                text-align: center
+
+        &-right
+            width: 100%
+
+        &__wrapper
+            // padding: 20px
+
+        &-right__item
+            margin: 20px
+            width: auto
+
+            &-title
+                position: static
+
+            &-text
+                position: static
+                width: 90%
+                height: 100%
+                text-align: center
+
+@media (max-width: 520px)
+    .Meditation-best-right__item-title
+        font-size: 28px
+        line-height: 50px
+
+    .Meditation-best-right__item-text
+        font-size: 20px
+        line-height: 24px
+        padding: 8px
+
+    .Meditation-best-left__item-title
+        font-size: 28px
+        line-height: 50px
+
+    .Meditation-best-left__item-text
+        font-size: 20px
+        line-height: 24px
+        padding: 8px
+
+@media (max-width: 331px)
+    .Meditation-best-right__item-title
+        font-size: 25px
+
+    .Meditation-best-right__item-text
+        font-size: 18px
+        line-height: 24px
+        padding: 8px
+
+    .Meditation-best-left__item-title
+        font-size: 25px
+
+    .Meditation-best-left__item-text
+        font-size: 18px
+        line-height: 24px
+        padding: 8px
