--- a/sass/style.sass
+++ b/sass/style.sass
@@ -57,6 +57,7 @@
 @import "../figma/Mediation/sass/Meditation-best"
 @import "../figma/Mediation/sass/gym"
 @import "../figma/Mediation/sass/footer"
+@import "../figma/Mediation/sass/header"
 
 @import "../Andrusha-main/sass/catalog"
 @import "../Andrusha-main/sass/education"
