--- a/css/style.css
+++ b/css/style.css
@@ -4949,14 +4949,14 @@ body.lockSOS {
 .Meditation-One {
   min-weight: auto;
   width: 100%;
-  height: 900px;
+  height: 1100px;
   background-repeat: no-repeat;
   justify-content: center;
   flex-direction: column;
   background-position: center;
   background-size: cover;
   position: relative;
-  background-image: url(../figma/Mediation/img/Group1.svg);
+  background-image: url(../figma/Mediation/img/Meditation-one.svg);
 }
 .Meditation-One__h1 {
   padding-top: 70px;
@@ -4995,6 +4995,10 @@ body.lockSOS {
   text-align: center;
   line-height: 280%;
   margin: 0 auto;
+  transition: 0.5s;
+}
+.Meditation-One .Get-Start:hover {
+  box-shadow: 0px 0px 50px #268a79;
 }
 .Meditation-One__img {
   display: flex;
@@ -5012,7 +5016,6 @@ body.lockSOS {
   flex-wrap: wrap;
   width: 100%;
   margin: 0 auto;
-  padding-top: 200px;
 }
 .Meditation-wrapper .paper {
   display: flex;
@@ -5068,6 +5071,10 @@ body.lockSOS {
   line-height: 48px;
   margin: 0 auto;
   margin-top: 50px;
+  transition: 0.5s;
+}
+.Meditation-wrapper .paper-button:hover {
+  box-shadow: 0px 0px 50px #268a79;
 }
 
 @font-face {
@@ -5139,22 +5146,49 @@ body.lockSOS {
 }
 .Meditation-wrapper {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  padding-top: 100px;
 }
-.Meditation-item__article-wrapper {
+.Meditation-item__article {
   width: 730px;
   height: 233px;
-  background-image: url(../figma/Mediation/img/item-1-background.svg);
   position: relative;
 }
-.Meditation-item__article-wrapper .title {
+.Meditation-item__article-active {
+  width: 818px;
+  height: 333px;
+  background-image: url(../figma/Mediation/img/Meditation-item__article-active.svg);
+  margin-top: -100px;
+}
+.Meditation-item__article-title {
   position: absolute;
+  top: 35px;
+  left: 70px;
+  padding-top: 35px;
+  padding-left: 70px;
   font-family: Heebo;
   font-weight: 500;
   font-size: 32px;
-  text-align: center;
+  text-align: left;
   text-shadow: none;
   color: rgba(0, 0, 0, 0.8);
+  position: absolute;
+  top: 35px;
+  left: 70px;
+}
+.Meditation-item__article-text {
+  padding-top: 10px;
+  padding-left: 70px;
+  font-family: Heebo;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 31px;
+  width: 689px;
+  height: 116px;
+  color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 92px;
+  left: 70px;
 }
 
 .Meditation-music {
@@ -5224,16 +5258,18 @@ body.lockSOS {
 }
 .Meditation-best-left__item {
   background-image: url(../figma/Mediation/img/Meditation-best__item-background-left.svg);
-  width: 602px;
-  height: 205px;
+  width: 600px;
+  height: 203px;
   position: relative;
   margin-top: 50px;
   margin-left: 20px;
   margin-right: 20px;
   transition: 0.5s;
+  border-radius: 16px;
 }
 .Meditation-best-left__item:hover {
   transform: scale(1.05);
+  box-shadow: 0px 0px 50px #268a79;
 }
 .Meditation-best-left__item-title {
   font-family: Heebo;
@@ -5269,8 +5305,9 @@ body.lockSOS {
 }
 .Meditation-best-right__item {
   background-image: url(../figma/Mediation/img/Meditation-best__item-background-right.svg);
-  width: 602px;
-  height: 205px;
+  width: 600px;
+  height: 203px;
+  border-radius: 16px;
   position: relative;
   margin-top: 50px;
   margin-left: 20px;
@@ -5279,6 +5316,7 @@ body.lockSOS {
 }
 .Meditation-best-right__item:hover {
   transform: scale(1.05);
+  box-shadow: 0px 0px 50px #268a79;
 }
 .Meditation-best-right__item-title {
   font-family: Heebo;
@@ -5367,6 +5405,16 @@ body.lockSOS {
     text-align: center;
     margin: 0 auto;
     position: static;
+  }
+}
+@media (max-width: 750px) {
+  .Meditation-best {
+    height: 1900px;
+  }
+}
+@media (max-width: 693px) {
+  .Meditation-best {
+    height: 1990px;
   }
 }
 @media (max-width: 670px) {
@@ -5657,6 +5705,12 @@ body.lockSOS {
     padding: 20px;
   }
 }
+.Meditation-header {
+  height: 130px;
+  width: 80%;
+  margin: 0 auto;
+}
+
 .container {
   width: 80%;
 }
