--- a/figma/Mediation/sass/Meditation-One.sass
+++ b/figma/Mediation/sass/Meditation-One.sass
@@ -1,14 +1,14 @@
 .Meditation-One
     min-weight: auto
     width: 100%
-    height: 900px
+    height: 1100px
     background-repeat: no-repeat
     justify-content: center
     flex-direction: column
     background-position: center
     background-size: cover
     position: relative
-    background-image: url(../figma/Mediation/img/Group1.svg)
+    background-image: url(../figma/Mediation/img/Meditation-one.svg)
 
     &__h1
         padding-top: 70px
@@ -47,6 +47,10 @@
         text-align: center
         line-height: 280%
         margin: 0 auto
+        transition: 0.5s
+
+        &:hover
+            box-shadow: 0px 0px 50px #268a79
 
     &__img
         display: flex
