--- a/figma/Mediation/sass/Meditation-item.sass
+++ b/figma/Mediation/sass/Meditation-item.sass
@@ -1,21 +1,49 @@
 .Meditation
     &-wrapper
         display: flex
-        justify-content: space-between
+        justify-content: space-around
+        padding-top: 100px
 
     &-item
 
-        &__article-wrapper
+        &__article
             width: 730px
             height: 233px
-            background-image: url(../figma/Mediation/img/item-1-background.svg)
+            //
             position: relative
 
-            .title
+            &-active
+                width: 818px
+                height: 333px
+                background-image: url(../figma/Mediation/img/Meditation-item__article-active.svg)
+                margin-top: -100px
+
+            &-title
                 position: absolute
+                top: 35px
+                left: 70px
+                padding-top: 35px
+                padding-left: 70px
                 font-family: Heebo
                 font-weight: 500
                 font-size: 32px
-                text-align: center
+                text-align: left
                 text-shadow: none
                 color: rgba(0, 0, 0, 0.8)
+                position: absolute
+                top: 35px
+                left: 70px
+
+            &-text
+                padding-top: 10px
+                padding-left: 70px
+                font-family: Heebo
+                font-weight: 400
+                font-size: 24px
+                line-height: 31px
+                width: 689px
+                height: 116px
+                color: rgba(0, 0, 0, 0.5)
+                position: absolute
+                top: 92px
+                left: 70px
