--- a/figma/Mediation/sass/papers.sass
+++ b/figma/Mediation/sass/papers.sass
@@ -4,7 +4,6 @@
     flex-wrap: wrap
     width: 100%
     margin: 0 auto
-    padding-top: 200px
 
     .paper
         display: flex
@@ -60,3 +59,7 @@
             line-height: 48px
             margin: 0 auto
             margin-top: 50px
+            transition: 0.5s
+
+            &:hover
+                box-shadow: 0px 0px 50px #268a79
