--- a/figma/Mediation/sass/header.sass
+++ b/figma/Mediation/sass/header.sass
@@ -1,4 +1,188 @@
 .Meditation-header
-    height: 130px
+    width: 100%
+    min-height: 100%
+
+.Meditation-header__container
     width: 80%
-    margin: 0 auto
+    margin: 0px auto
+    display: flex
+    align-items: center
+    justify-content: space-between
+    min-height: 70px
+
+body.lockMeditation
+    overflow: hidden
+
+.header-container
+    max-width: 1200px
+    margin: 0px auto
+    display: flex
+    padding: 0px 30px
+    align-items: center
+    justify-content: space-between
+    min-height: 70px
+
+.Meditation-header__burgerMenu
+    display: none
+
+.Meditation-header__list
+    padding: 0 30px
+
+.Meditation-header__list
+    z-index: 10
+    li
+        position: relative
+        margin: 0px 0px 0px 20px
+
+        a
+            &:hover
+                color: #1A7F72
+
+            &::before
+                content: ''
+                bottom: 0
+                left: 0
+                position: absolute
+                width: 100%
+                height: 10px
+                border-radius: 10px 10px 0px 0px
+                background-color: #1A7F72
+                transition: 0.5s
+                transform: scaleX(0)
+
+            &:hover:before
+                transform: scaleX(1)
+
+.menu-link-Meditation
+    color: black
+    font-size: 32px
+    line-height: 47px
+    font-weight: 500
+    font-family: Heebo
+    padding: 38px 17px
+    transition: 0.5s
+
+.Meditation-header__menu-body
+    display: flex
+    justify-content: space-between
+    width: 100%
+
+.Meditation-header__menu
+    display: flex
+    justify-content: space-between
+
+@media (min-width: 1519px)
+    .Meditation-header__list
+        display: flex
+        align-items: center
+
+@media (max-width: 1519px)
+
+    .Meditation-header__logo
+        margin-left: 20px
+
+    .Meditation-header__burgerMenu
+        z-index: 5
+        display: block
+        position: relative
+        width: 30px
+        height: 18px
+        cursor: pointer
+        margin-right: 20px
+
+    .Meditation-header__burgerMenu span,
+    .Meditation-header__burgerMenu::before,
+    .Meditation-header__burgerMenu::after
+        left: 0
+        position: absolute
+        height: 10%
+        width: 100%
+        transition: all 0.3s ease 0s
+        background-color: #1A7F72
+
+    .Meditation-header__burgerMenu::before,
+    .Meditation-header__burgerMenu::after
+        content: ""
+
+    .Meditation-header__burgerMenu::before
+        top: 0
+
+    .Meditation-header__burgerMenu::after
+        bottom: 0
+
+    .Meditation-header__burgerMenu span
+        top: 50%
+        transform: scale(1) translate(0px, -50%)
+
+    .Meditation-header__burgerMenu.activeMeditation-header span
+        transform: scale(0) translate(0px, -50%)
+
+    .Meditation-header__burgerMenu.activeMeditation-header::before
+        top: 50%
+        transform: rotate(-45deg) translate(0px, -50%)
+        background: rgba(255, 255, 255, 0.5)
+
+    .Meditation-header__burgerMenu.activeMeditation-header::after
+        bottom: 50%
+        transform: rotate(45deg) translate(0px, 50%)
+        background: rgba(255, 255, 255, 0.5)
+
+    .Meditation-header__menu-body
+        position: fixed
+        top: 0
+        left: -100%
+        width: 100%
+        height: 100%
+        background-color: transparent
+        padding: 100px 30px 30px 30px
+        transition: left 0.3s ease 0s
+        overflow: auto
+        display: inline
+        background-color: rgb(21, 150, 133, 0.9)
+
+    .Meditation-header__menu-body.activeMeditation-header
+        left: 0
+        z-index: 3
+
+    .Meditation-header__menu-body::before
+        content: ""
+        position: fixed
+        width: 100%
+        top: 0
+        left: 0
+        height: 70px
+        background-color: transparent
+        z-index: 2
+
+    .Meditation-header__list
+        li
+            flex-wrap: wrap
+            margin: 0px 0px 30px 0px
+            text-align: center
+
+    .Meditation-header__list
+        li:last-child
+            margin-bottom: 0
+
+    .Meditation-header__list
+        li:first-child
+            margin-top: 30px
+
+    .menu-link-Meditation
+        font-size: 24px
+        color: #fff
+        padding: 0
+
+    .Meditation-header__menu
+        width: 0
+
+    .Meditation-header__button
+        width: 90px
+        height: 45px
+        &-text
+            margin-top: 8px
+
+@media (max-width: 570px)
+
+    .Meditation-header__container
+        width: 95%
