--- a/css/style.css
+++ b/css/style.css
@@ -3665,13 +3665,16 @@ html {
 
   .ZEN-section__common {
     display: flex;
-    flex-direction: column;
-  }
-  .ZEN-section__common:nth-child(2) {
     flex-direction: column-reverse;
   }
+  .ZEN-section__common:nth-child(2) {
+    flex-direction: column;
+  }
   .ZEN-section__common:nth-child(7) {
-    flex-direction: column-reverse !important;
+    flex-direction: column !important;
+  }
+  .ZEN-section__common-reverse {
+    flex-direction: column;
   }
 }
 @media (max-width: 1050px) {
