--- a/figma/Mediation/sass/papers.sass
+++ b/figma/Mediation/sass/papers.sass
@@ -9,9 +9,9 @@
         display: flex
         flex-direction: column
         justify-content: center
-        width: 420px
-        height: 540px
-        background-size: contain
+        width: 490px
+        height: 570px
+        background-size: cover
         background-repeat: no-repeat
 
         &-1
