--- a/figma/SOS/sass/sectionOne.sass
+++ b/figma/SOS/sass/sectionOne.sass
@@ -140,7 +140,7 @@
 
     &:hover
         background: linear-gradient(#fc9804, #d39013)
-        border: 1.5px solid darkred
+        box-shadow: 0px 0px 50px #d39013
 
     &__left
         position: absolute
