--- a/figma/ZEN/sass/sectionZEN-Cashbask.sass
+++ b/figma/ZEN/sass/sectionZEN-Cashbask.sass
@@ -32,6 +32,7 @@
         &:hover
             border: 1px solid red
             background: rgba(255, 0, 0, 0.2)
+            box-shadow: 0px 0px 20px #ff6781
 
         &-text
             a
