--- a/figma/SOS/sass/sectionSix.sass
+++ b/figma/SOS/sass/sectionSix.sass
@@ -102,7 +102,7 @@
 
     &:hover
         background: linear-gradient(#fc9804, #d39013)
-        border: 1.5px solid darkred
+        box-shadow: 0px 0px 50px #d39013
 
     button
         width: 250px
