--- a/figma/ZEN/sass/headerNew.sass
+++ b/figma/ZEN/sass/headerNew.sass
@@ -61,6 +61,7 @@ li
     &__button:hover
         border: 1px solid red
         background: rgba(255, 0, 0, 0.2)
+        box-shadow: 0px 0px 20px #ff6781
 
     &__button-text
         text-align: center
